--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
         
     </header>
 
+    <main>
+
+        <h1>
+            Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee
+        </h1>
+        <span class="grey-text">Scritto da <span id="blue-text">The Booleaners</span></span>
+        <span class="grey-text">il 10/10/2020</span>
+
+    </main>
+
 
 
 
