ADD first section main - imgs

--- a/index.html
+++ b/index.html
@@ -19,12 +19,24 @@
     </header>
 
     <main>
+    
 
+
+    <!-- title -->
+    <section>
         <h1>
             Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee
         </h1>
         <span class="grey-text">Scritto da <span id="blue-text">The Booleaners</span></span>
         <span class="grey-text">il 10/10/2020</span>
+    </section>
+
+    <section>
+        <img src="./img/tim-1.jpg" alt="tim-img-1">
+        <img src="./img/tim-2.jpg" alt="tim-img-2">
+        <span class="sub-info">1st Photo: John S. and James L. Knight Foundation, by Scott Herichsen</span>
+        <span class="sub-info">2nd Photo: Wikimedia, by Paul Clark</span>
+    </section>
 
     </main>
 
