--- a/index.html
+++ b/index.html
@@ -38,6 +38,50 @@
         <span class="sub-info">2nd Photo: Wikimedia, by Paul Clark</span>
     </section>
 
+    <section>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. <span id="highlight">Eos minus voluptatum dolore accusamus quas autem quaerat</span> dolores debitis sequi ducimus cupiditate aliquid, tempora deserunt quasi nisi aut! Natus, beatae tempore.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet quia odit quibusdam corrupti accusamus adipisci, unde iure cumque laudantium. Iure incidunt, explicabo corporis quam ut pariatur maxime odio ipsam suscipit?
+            Delectus sequi repellendus iste, in a doloribus similique, blanditiis praesentium, vero ex illo veniam nihil sapiente! Quaerat cum officiis dolorem eveniet eius laboriosam, libero fuga obcaecati, asperiores, officia similique natus.
+            Eum velit alias minima quasi voluptatem omnis nemo rerum inventore aliquid quae architecto aperiam fugiat, ut debitis vero perferendis, doloremque beatae enim aut ad deserunt impedit! Vel laboriosam et perspiciatis.
+        </p>
+
+        <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis perferendis sunt consectetur id blanditiis, sed soluta veritatis sint illo libero</li>
+            <li>luta veritatis sint illo libero ea repellendus temporibus, sapiente dolore vel minus distinctio itaque sit!</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis perferendis sunt consectetur id blanditiis</li>
+        </ul>
+
+        <table>
+            <thead>
+                <tr id="table-title">
+                    <th>Lorem ipsum dolor </th>
+                    <th>Lorem ipsum dolor </th>
+                    <th>Lorem ipsum dolor </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="table-color">
+                    <td>Lorem impsus dolor </td>
+                    <td>Lorem impsus dolor </td>
+                    <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias deserunt inventore obcaecati ducimus repellat eveniet aliquam nihil odio mollitia numquam architecto veniam ullam ex earum blanditiis ipsum sequi, laboriosam consectetur?</td>
+                </tr>
+                <tr>
+                    <td>Lorem impsus dolor </td>
+                    <td>Lorem impsus dolor </td>
+                    <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias deserunt inventore obcaecati ducimus repellat eveniet aliquam nihil odio mollitia numquam architecto veniam ullam ex earum blanditiis ipsum sequi, laboriosam consectetur?</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr class="table-color">
+                    <td>Lorem impsus dolor </td>
+                    <td>Lorem impsus dolor </td>
+                    <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias deserunt inventore obcaecati ducimus repellat eveniet aliquam nihil odio mollitia numquam architecto veniam ullam ex earum blanditiis ipsum sequi, laboriosam consectetur?</td>
+                </tr>
+            </tfoot>
+        </table>
+    </section>
+
     </main>
 
 
