--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li>luta veritatis sint illo libero ea repellendus temporibus, sapiente dolore vel minus distinctio itaque sit!</li>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis perferendis sunt consectetur id blanditiis</li>
         </ul>
-
+    <!-- table -->
         <table>
             <thead>
                 <tr id="table-title">
@@ -83,8 +83,10 @@
     </section>
 
     </main>
-
-
+    <!-- footer section -->
+    <footer>
+        <h3>Copyright The Booleaner - Tutti i diritti riservati</h3>
+    </footer>
 
 
 
